--- a/themes/ocean/layout/_partial/article.ejs
+++ b/themes/ocean/layout/_partial/article.ejs
@@ -57,7 +57,7 @@
 
 
 <% if (!index && is_post()) { %>
-	<div style="text-align:center;color: #ccc;font-size:14px;">------------- 莫得啦，还想知道什么？&nbsp;<i class="fe fe-smile"></i>&nbsp;可以找我聊嘿~ -------------</div>
+	<div style="text-align:center;color: #ccc;font-size:14px;">------------- 以上只是个人的看法 没有其他意思 &nbsp;<i class="fe fe-smile"></i>&nbsp; 还想知道些什么？可以找我聊嘿-------------</div>
 <% } %>
 
 
