--- a/themes/ocean/layout/_partial/after-footer.ejs
+++ b/themes/ocean/layout/_partial/after-footer.ejs
@@ -28,10 +28,7 @@
 
 <%- js('js/ocean') %>
 
-<% if (theme.fireworksjs){ %>
-  <canvas class="fireworks" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;" ></canvas>
-  <%- js('/js/anime.min.js') %>
-  <%- js('/js/fireworks.js') %>
-<% } %>
-
+<% if (theme.lihwjs){ %>
+	<%- js('/js/lihw.js') %>
+<% } %> 
 
