--- a/themes/ocean/layout/_partial/sidebar.ejs
+++ b/themes/ocean/layout/_partial/sidebar.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar">
   <% if (theme.brand){ %>
   <div class="logo">
-    <a href="<%- url_for() %>"><img id="vimg" src="<%- theme.brand %>" alt="<%= config.title %>" class="vimg"></a>
+    <a href="<%- url_for() %>"><img src="<%- theme.brand %>" alt="<%= config.title %>" ></a>
   </div>
   <% } %>
   <ul class="nav nav-main">
