--- a/themes/ocean/source/css/_partial/sidebar.styl
+++ b/themes/ocean/source/css/_partial/sidebar.styl
@@ -1,11 +1,11 @@
 @import "navbar"
 @import "totop"
 
-
-img:hover {
-transform: rotate(666turn);
-transition-delay: 1s;
-transition-property: all;
-transition-duration: 180s;
-transition-timing-function: cubic-bezier(.34,0,.84,1);
-}
+.logo
+    img:hover {
+    transform: rotate(666turn);
+    transition-delay: 1s;
+    transition-property: all;
+    transition-duration: 180s;
+    transition-timing-function: cubic-bezier(.34,0,.84,1);
+    }
