--- a/themes/ocean/layout/_partial/after-footer.ejs
+++ b/themes/ocean/layout/_partial/after-footer.ejs
@@ -31,3 +31,8 @@
 <% if (theme.lihwjs){ %>
 	<%- js('/js/lihw.js') %>
 <% } %> 
+
+
+<% if (theme.baidustatistic){ %>
+  <%- ('/_partial/post/baidustatistic.ejs') %>
+<% } %>
