--- a/themes/ocean/layout/_partial/after-footer.ejs
+++ b/themes/ocean/layout/_partial/after-footer.ejs
@@ -33,6 +33,6 @@
 <% } %> 
 
 
-<% if (theme.baidustatistic){ %>
-  <%- ('/_partial/post/baidustatistic.ejs') %>
+<% if (theme.baidustatistic.enable){ %>
+  <%- partial('post/baidustatistic') %>
 <% } %>
