--- a/themes/ocean/layout/_partial/article.ejs
+++ b/themes/ocean/layout/_partial/article.ejs
@@ -57,7 +57,7 @@
 
 
 <% if (!index && is_post()) { %>
-	<div style="text-align:center;color: #ccc;font-size:14px;">-------------以上纯属个人想法  &nbsp;<i class="fe fe-smile"></i>&nbsp; 更多详情联系本人-------------</div>
+	<div style="text-align:center;color: #ccc;font-size:14px;">-------------一切答案  &nbsp;<i class="fe fe-smile"></i>&nbsp; 都在内心-------------</div>
 <% } %>
 
 
